[gd_scene load_steps=7 format=3 uid="uid://buapai5om3oao"]

[ext_resource type="Script" path="res://ui/LevelUp/LevelUp.gd" id="1_wgmem"]
[ext_resource type="Script" path="res://ui/LevelUp/select_weapon.gd" id="2_2i5d0"]
[ext_resource type="Texture2D" uid="uid://6nfx362wjv4p" path="res://asset/pic/ui/升级UI.png" id="3_kbms8"]
[ext_resource type="Texture2D" uid="uid://cradmhyi52t4m" path="res://asset/pic/ui/120111_hr1.png" id="4_h36oa"]
[ext_resource type="Texture2D" uid="uid://g5lvf18upjqr" path="res://asset/pic/ui/battletalk_hr1_oldver.png" id="5_qkjax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2ah3e"]
atlas = ExtResource("5_qkjax")
region = Rect2(3, 291, 251, 82)

[node name="LevelUp" type="Control"]
process_mode = 3
z_index = 901
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wgmem")

[node name="select_weapon" type="CanvasLayer" parent="."]
layer = 10
offset = Vector2(100, 100)
scale = Vector2(1.5, 1.5)
transform = Transform2D(1.5, 0, 0, 1.5, 100, 100)
script = ExtResource("2_2i5d0")

[node name="select_buttons" type="VBoxContainer" parent="select_weapon"]
offset_left = 472.0
offset_top = 184.0
offset_right = 728.0
offset_bottom = 430.0
scale = Vector2(0.8, 0.8)
focus_mode = 2

[node name="back2" type="Sprite2D" parent="select_weapon"]
z_index = -10
position = Vector2(574, 272.5)
scale = Vector2(0.12, 0.12)
texture = ExtResource("3_kbms8")

[node name="120111Hr1" type="Sprite2D" parent="select_weapon"]
position = Vector2(579, 140.667)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_h36oa")

[node name="reroll" type="TextureButton" parent="select_weapon"]
offset_left = 956.0
offset_top = 83.3333
offset_right = 1207.0
offset_bottom = 165.333
texture_normal = SubResource("AtlasTexture_2ah3e")

[node name="weapon" type="RichTextLabel" parent="select_weapon/reroll"]
layout_mode = 0
offset_left = 89.3333
offset_top = 19.3333
offset_right = 378.333
offset_bottom = 128.333
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=white]刷新"
scroll_active = false

[node name="ban" type="TextureButton" parent="select_weapon"]
offset_left = 958.0
offset_top = 184.667
offset_right = 1209.0
offset_bottom = 266.667
texture_normal = SubResource("AtlasTexture_2ah3e")

[node name="weapon" type="RichTextLabel" parent="select_weapon/ban"]
layout_mode = 0
offset_left = 42.0
offset_top = 19.3334
offset_right = 331.0
offset_bottom = 128.333
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=white]排除不想要的"
scroll_active = false

[node name="abandon" type="TextureButton" parent="select_weapon"]
offset_left = 956.0
offset_top = -20.6667
offset_right = 1207.0
offset_bottom = 61.3334
texture_normal = SubResource("AtlasTexture_2ah3e")

[node name="weapon" type="RichTextLabel" parent="select_weapon/abandon"]
layout_mode = 0
offset_left = 10.0
offset_top = 18.6667
offset_right = 299.0
offset_bottom = 127.667
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[color=white]放弃升级（得点倍率+"
scroll_active = false

[connection signal="button_up" from="select_weapon/reroll" to="select_weapon" method="_on_reroll_button_up"]
[connection signal="button_up" from="select_weapon/ban" to="select_weapon" method="_on_ban_button_up"]
[connection signal="button_up" from="select_weapon/abandon" to="select_weapon" method="_on_abandon_button_up"]
